--- a/.env.local.example
+++ b/.env.local.example
@@ -22,6 +22,10 @@ GOOGLE_SECRET=
 TWITTER_ID=
 TWITTER_SECRET=
 
+AZURE_AD_CLIENT_ID=
+AZURE_AD_CLIENT_SECRET=
+AZURE_AD_TENANT_ID=
+
 EMAIL_SERVER=smtp://username:password@smtp.example.com:587
 EMAIL_FROM=NextAuth <noreply@example.com>
 
